name: computational-algebra
version: 0.5.1.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (C) Hiromi ISHII 2013
maintainer: konn.jinro_at_gmail.com
homepage: https://konn.github.com/computational-algebra
synopsis: Well-kinded computational algebra library, currently supporting Groebner basis.
description: Dependently-typed computational algebra library for Groebner basis.
category: Math
author: Hiromi ISHII
data-dir: ""
tested-with:        GHC == 8.0.2, GHC == 8.2.2
extra-source-files: README.md examples/*.hs tests/*.hs bench/*.hs
                    share/*.hs data/conway.txt
 
source-repository head
    type: git
    location: git://github.com/konn/computational-algebra.git
 
flag examples
    default: False
    manual:  True

flag profile
    manual:  True
    default: False
 
library
    build-depends:     MonadRandom          >= 0.1
                     , algebra             >= 4.1
                     , algebraic-prelude    >= 0.1.1.0
                     , arithmoi             >= 0.5
                     , base                 >= 4
                     , constraints          >= 0.3
                     , containers           >= 0.5
                     , control-monad-loop   >=0.1
                     , convertible          >= 1.1
                     , deepseq              >= 1.3
                     , dlist
                     , entropy
                     , equational-reasoning >= 0.4.1.1
                     , ghc-typelits-knownnat
                     , ghc-typelits-natnormalise
                     , ghc-typelits-presburger
                     , hashable             >= 1.1
                     , heaps                >= 0.3
                     , hmatrix              >= 0.16
                     , hybrid-vectors       >= 0.1
                     , hybrid-vectors       >=0.1
                     , integer-logarithms    >= 1.0
                     , lens                 >= 4.13
                     , matrix               >= 0.3
                     , monad-loops          >= 0.4
                     , mono-traversable     >= 0.10
                     , monomorphic          >= 0.0.3
                     , mtl                  >= 2.1
                     , parallel             >= 3.2
                     , primes               >= 0.2.1
                     , reflection           >= 2
                     , semigroups           >= 0.15
                     , singletons           >= 2.2 && < 2.4
                     , sized                == 0.2.*
                     , tagged               >= 0.7
                     , template-haskell     -any
                     , text                 >=0.11
                     , type-natural         >= 0.7.1 && < 0.8
                     , unamb                >= 0.2
                     , unordered-containers >= 0.2
                     , vector               >= 0.10
                     , vector-algorithms
    exposed-modules:   Algebra.Algorithms.ChineseRemainder
                       Algebra.Algorithms.Groebner
                       Algebra.Algorithms.PrimeTest
                       Algebra.Algorithms.ZeroDim
                       Algebra.Field.AlgebraicReal
                       Algebra.Field.Finite
                       Algebra.Field.Galois
                       Algebra.Instances
                       Algebra.Internal
                       Algebra.LinkedMatrix
                       Algebra.Matrix
                       Algebra.Normed
                       Algebra.Prelude
                       Algebra.Prelude.Core
                       Algebra.Ring.Ideal
                       Algebra.Ring.Polynomial
                       Algebra.Ring.Polynomial.Class
                       Algebra.Ring.Polynomial.Factorise
                       Algebra.Ring.Polynomial.Labeled
                       Algebra.Ring.Polynomial.Monomial
                       Algebra.Ring.Polynomial.Quotient
                       Algebra.Ring.Polynomial.Univariate
                       Algebra.Scalar
    exposed:           True
    other-modules:     Algebra.Algorithms.FGLM
                       Algebra.Field.Galois.Conway
                       Algebra.Field.Galois.Internal
                       Algebra.Ring.Polynomial.Internal
    ghc-options:      -O2 -Wall -Wno-unused-top-binds
                      -fplugin GHC.TypeLits.KnownNat.Solver
    default-language:   Haskell2010
    default-extensions: CPP
                      , DataKinds
                      , FlexibleContexts
                      , FlexibleInstances
                      , GADTs
                      , MultiParamTypeClasses
                      , NoImplicitPrelude
                      , OverloadedLabels
                      , PolyKinds
                      , TypeFamilies
                      , UndecidableInstances
 
executable groebner-prof
  hs-source-dirs:      share examples
  Main-is:             groebner-prof.hs
  build-depends:       base
                     , computational-algebra
                     , deepseq
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -O2
  default-extensions:  NoImplicitPrelude

  if flag(profile)
      ghc-options:       -prof -fprof-auto-exported
  else
      Buildable: False

executable solve
    build-depends: MonadRandom >= 0.1
                 , algebra >= 4.1
                 , base >=4, type-natural
                 , computational-algebra
                 , constraints >=0.3
                 , convertible >= 1.1
                 , hmatrix
                 , lens >= 3.9
                 , matrix >= 0.3
                 , random >= 1.0
                 , semigroups >= 0.15.2
                 , sized
                 , vector >= 0.10
     
    main-is: solve.hs
    hs-source-dirs: share examples
    ghc-options: -caf-all -auto-all -rtsopts -O2 -threaded

    if !flag(examples)
        buildable: False

executable algebraic
  Main-is:             algebraic.hs
  hs-source-dirs:      examples
  build-depends:       algebraic-prelude
                     , base
                     , computational-algebra
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded

  if !flag(examples)
      buildable: False


executable ipsolve
    build-depends: MonadRandom >= 0.1
                 , algebra >= 4.1
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , convertible >= 1.1
                 , equational-reasoning >= 0.2
                 , hmatrix
                 , lens >= 3.9
                 , matrix >= 0.3
                 , parallel >= 3.2
                 , random >= 1.0
                 , reflection >=1.4
                 , semigroups >= 0.15.2
                 , singletons
                 , sized
                 , type-natural
                 , vector >= 0.10
     
    main-is: ipsolve.hs
    hs-source-dirs: share examples
    ghc-options: -caf-all -auto-all -rtsopts -O2 -threaded

    if !flag(examples)
        buildable: False
 
executable hensel-prof
    build-depends: MonadRandom >= 0.1
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , convertible >= 1.1
                 , criterion >= 0.8.1.0    
                 , deepseq >= 1.3
                 , hmatrix
                 , lens >= 3.9
                 , matrix >= 0.3
                 , random >= 1.0
                 , semigroups >= 0.15.2
                 , sized
                 , type-natural
                 , vector >= 0.10
    if flag(profile)
        ghc-options: -caf-all -auto-all -rtsopts -eventlog
    else
        buildable: False
    main-is: hensel-prof.hs
    hs-source-dirs: share examples
    ghc-options: -O2 -threaded

executable sandpit-poly
    build-depends: algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , semigroups >= 0.15.2
                 , sized
                 , type-natural
     
    if !flag(examples)
        buildable: False
    main-is: sandpit-poly.hs
    hs-source-dirs: share examples


executable quotient
    build-depends: algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , reflection
                 , semigroups >= 0.15.2
                 , sized
                 , type-natural
     
    if !flag(examples)
        buildable: False
    main-is: quotient.hs
    hs-source-dirs: share examples
 
test-suite test-multi-table
    build-depends: HUnit >=1.2.5.2
                 , QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , equational-reasoning >= 0.2
                 , hspec >=1.9.5
                 , lazysmallcheck >= 0.6
                 , lens >= 3.9
                 , quickcheck-instances >=0.3.8
                 , reflection >=1.4
                 , sized
                 , smallcheck >=1.1.1
                 , tagged >= 0.7
                 , test-framework >=0.8.0.3
                 , test-framework-hunit >=0.3.0.1
                 , transformers >= 0.3
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: multi-table.hs
    buildable: False
    hs-source-dirs: tests share
    other-modules: Utils
    ghc-options: -Wall -threaded

test-suite singular-test
    main-is: SingularTest.hs
    type: exitcode-stdio-1.0
    buildable: False
    hs-source-dirs: tests share
    other-modules: Utils SingularBridge
    ghc-options: -Wall -threaded
    build-depends: HUnit -any
                 , MonadRandom >= 0.1
                 , QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , hspec -any
                 , lens
                 , matrix
                 , monomorphic >=0.0.3
                 , quickcheck-instances >= 0.3.8
                 , reflection
                 , singletons
                 , sized
                 , smallcheck -any
                 , tagged
                 , test-framework -any
                 , test-framework-hunit -any
                 , text
                 , type-natural
                 , vector >= 0.10

test-suite monomial-order-test
    build-depends: HUnit -any
                 , MonadRandom >= 0.1
                 , QuickCheck >= 2.6
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , hspec -any
                 , monomorphic >=0.0.3
                 , sized
                 , smallcheck -any
                 , test-framework -any
                 , test-framework-hunit -any
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: monomials.hs
    buildable: False
    hs-source-dirs: tests share
    other-modules: Utils
    ghc-options: -Wall -threaded

test-suite linear-test
    build-depends: HUnit -any
                 , MonadRandom >= 0.1
                 , QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , hspec -any
                 , lens >= 3.9
                 , matrix >= 0.3
                 , monomorphic >=0.0.3
                 , quickcheck-instances -any
                 , reflection >=1.4
                 , sized
                 , smallcheck -any
                 , tagged >= 0.7
                 , test-framework -any
                 , test-framework-hunit -any
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: linear.hs
    buildable: True
    hs-source-dirs: tests share
    other-modules: Utils
    ghc-options: -Wall -threaded

test-suite matrix-test
    build-depends: HUnit -any
                 , MonadRandom >= 0.1
                 , QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , hspec -any
                 , lens >= 3.9
                 , matrix >= 0.3
                 , monomorphic >=0.0.3
                 , quickcheck-instances -any
                 , reflection >=1.4
                 , sized
                 , smallcheck -any
                 , tagged >= 0.7
                 , test-framework -any
                 , test-framework-hunit -any
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: matrix.hs
    buildable: False
    hs-source-dirs: tests share
    other-modules: Utils
    ghc-options: -Wall -threaded

test-suite specs
    build-depends: HUnit -any
                 , MonadRandom >= 0.1
                 , QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , convertible
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , hspec -any
                 , lens >= 3.9
                 , matrix >= 0.3
                 , monomorphic >=0.0.3
                 , process >=1.1
                 , quickcheck-instances -any
                 , reflection >=1.4
                 , singletons
                 , sized
                 , smallcheck -any
                 , tagged >= 0.7
                 , test-framework -any
                 , test-framework-hunit -any
                 , text >= 0.11
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    buildable: True
    hs-source-dirs: tests share
    other-modules: QuotientSpec PolynomialSpec SingularBridge
                   Utils UnivariateSpec GroebnerSpec ZeroDimSpec
    ghc-options: -Wall -threaded

test-suite new-div-test
    build-depends: HUnit -any
                 , MonadRandom >= 0.1
                 , QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , hspec -any
                 , lens >= 3.9
                 , matrix >= 0.3
                 , monomorphic >=0.0.3
                 , quickcheck-instances -any
                 , reflection >=1.4
                 , smallcheck -any
                 , tagged >= 0.7
                 , test-framework -any
                 , test-framework-hunit -any
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: division.hs
    buildable: False
    hs-source-dirs: tests share
    other-modules: Utils
    ghc-options: -Wall -threaded
 
benchmark unipol-bench
    build-depends: algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , criterion >= 0.8.1.0
                 , deepseq >= 1.3
                 , matrix >= 0.3
                 , parallel >= 3.2
                 , process >=1.1
                 , singletons
                 , sized
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: unipol-bench.hs
    hs-source-dirs: bench share
    ghc-options: -O2 -threaded -rtsopts

benchmark normal-bench
    build-depends: algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , criterion >= 0.8.1.0
                 , deepseq >= 1.3
                 , matrix >= 0.3
                 , parallel >= 3.2
                 , process >=1.1
                 , singletons
                 , sized
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: bench.hs
    -- buildable: False
    hs-source-dirs: bench share
    other-modules: SingularBench
    ghc-options: -O2 -threaded -rtsopts

benchmark elimination-bench
    build-depends: algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , criterion >= 0.8.1.0
                 , deepseq >= 1.3
                 , matrix >= 0.3
                 , parallel >= 3.2
                 , process >=1.1
                 , singletons
                 , sized
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: elimination-bench.hs
    buildable: False
    hs-source-dirs: bench share
    other-modules: SingularBench
    ghc-options: -O2 -threaded -rtsopts

benchmark quotient-bench-randomized
    build-depends: QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , containers >= 0.5
                 , criterion >= 0.8.1.0
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , lens >= 3.9
                 , matrix >= 0.3
                 , monomorphic >=0.0.3
                 , parallel >= 3.2
                 , process >=1.1
                 , quickcheck-instances -any
                 , reflection >=1.4
                 , singletons
                 , sized
                 , smallcheck -any
                 , tagged >= 0.7
                 , transformers >= 0.3
                 , type-natural
                 , vector >= 0.10
                , constraints >=0.3
    type: exitcode-stdio-1.0
    main-is: quotient-bench-randomized.hs
    buildable: True
    hs-source-dirs: bench share
    other-modules: SingularBench Utils
    ghc-options: -O2 -threaded -rtsopts

benchmark monomial-order-bench
    build-depends: QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , criterion >= 0.8.1.0
                 , deepseq >= 1.3
                 , lens >= 3.9
                 , matrix >= 0.3
                 , monomorphic >=0.0.3
                 , parallel >= 3.2
                 , process >=1.1
                 , quickcheck-instances -any
                 , random >= 1.0
                 , reflection >=1.4
                 , singletons
                 , sized
                 , smallcheck -any
                 , tagged >= 0.7
                 , transformers >= 0.3
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: monomials.hs
    buildable: False
    hs-source-dirs: bench share
    other-modules: SingularBench Utils
    ghc-options: -O2 -threaded -rtsopts

benchmark linear-bench
    build-depends: HUnit -any
                 , MonadRandom >= 0.1
                 , QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , criterion >= 0.8.1.0
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , hspec -any
                 , lens >= 3.9
                 , matrix >= 0.3
                 , monomorphic >=0.0.3
                 , monomorphic >=0.0.3
                 , parallel >= 3.2
                 , process >=1.1
                 , quickcheck-instances -any
                 , reflection >=1.4
                 , sized
                 , smallcheck -any
                 , tagged >= 0.7
                 , test-framework -any
                 , test-framework-hunit -any
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: linear.hs
    buildable: False
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -O2 -threaded -rtsopts

benchmark division-bench
    build-depends: HUnit -any
                 , MonadRandom >= 0.1
                 , QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , criterion >= 0.8.1.0
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , hspec -any
                 , lens >= 3.9
                 , matrix >= 0.3
                 , monomorphic >=0.0.3
                 , monomorphic >=0.0.3
                 , parallel >= 3.2
                 , process >=1.1
                 , quickcheck-instances -any
                 , reflection >=1.4
                 , sized
                 , smallcheck -any
                 , tagged >= 0.7
                 , test-framework -any
                 , test-framework-hunit -any
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: division.hs
    buildable: False
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -O2 -threaded -rtsopts

benchmark sugar-paper-bench
    build-depends: HUnit -any
                 , MonadRandom >= 0.1
                 , QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , criterion >= 0.8.1.0
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , hspec -any
                 , lens >= 3.9
                 , matrix >= 0.3
                 , monomorphic >=0.0.3
                 , monomorphic >=0.0.3
                 , parallel >= 3.2
                 , process >=1.1
                 , quickcheck-instances -any
                 , reflection >=1.4
                 , sized
                 , smallcheck -any
                 , tagged >= 0.7
                 , test-framework -any
                 , test-framework-hunit -any
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: sugar-paper.hs
    buildable: True
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -O2 -threaded -rtsopts

benchmark solve-bench
    build-depends: HUnit -any
                 , MonadRandom >= 0.1
                 , QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , criterion >= 0.8.1.0
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , hspec -any
                 , lens >= 3.9
                 , matrix >= 0.3
                 , monomorphic >=0.0.3
                 , parallel >= 3.2
                 , process >=1.1
                 , quickcheck-instances -any
                 , random >= 1.0
                 , reflection >=1.4
                 , sized
                 , smallcheck -any
                 , tagged >= 0.7
                 , test-framework -any
                 , test-framework-hunit -any
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: solve.hs
    buildable: True
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -O2 -threaded -rtsopts

benchmark coercion-bench
    build-depends: HUnit -any
                 , MonadRandom >= 0.1
                 , QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , criterion >= 0.8.1.0
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , hspec -any
                 , lens >= 3.9
                 , matrix >= 0.3
                 , monomorphic >=0.0.3
                 , parallel >= 3.2
                 , process >=1.1
                 , quickcheck-instances -any
                 , random >= 1.0
                 , reflection >=1.4
                 , sized
                 , smallcheck -any
                 , tagged >= 0.7
                 , test-framework -any
                 , test-framework-hunit -any
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: coercion.hs
    buildable: False
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -Wall -O2 -threaded -rtsopts

benchmark unipol-mult-bench
    build-depends: HUnit -any
                 , QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , constraints >=0.3
                 , containers >= 0.5
                 , criterion >= 0.8.1.0
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , hspec -any
                 , lens >= 3.9
                 , matrix >= 0.3
                 , monomorphic >=0.0.3
                 , parallel >= 3.2
                 , process >=1.1
                 , quickcheck-instances -any
                 , random >= 1.0
                 , reflection >=1.4
                 , sized
                 , smallcheck -any
                 , tagged >= 0.7
                 , test-framework -any
                 , test-framework-hunit -any
                 , type-natural
                 , vector >= 0.10
    type: exitcode-stdio-1.0
    main-is: unipol-mult.hs
    buildable: True
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -Wall -O2 -threaded -rtsopts

benchmark unipol-div-bench
    build-depends: HUnit -any
                 , QuickCheck >= 2.6
                 , algebra
                 , base >=4
                 , computational-algebra
                 , containers >= 0.5
                 , criterion >= 0.8.1.0
                 , deepseq >= 1.3
                 , equational-reasoning >= 0.2
                 , hspec -any
                 , lens >= 3.9
                 , matrix >= 0.3
                 , monomorphic >=0.0.3
                 , parallel >= 3.2
                 , process >=1.1
                 , quickcheck-instances -any
                 , random >= 1.0
                 , reflection >=1.4
                 , sized
                 , smallcheck -any
                 , tagged >= 0.7
                 , test-framework -any
                 , test-framework-hunit -any
                 , type-natural
                 , vector >= 0.10
                , constraints >=0.3
    type: exitcode-stdio-1.0
    main-is: unipol-div.hs
    buildable: True
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -Wall -O2 -threaded -rtsopts
